# Elevator-Iris-Explainer

./: .gitattributes  .gitignore  LICENSE  README.md  manim.cfg  pyproject.toml  render.ps1  render.py  requirements.txt
docs/: MATH.md
iris_explainer/: __init__.py  geometry.py  manim_helpers.py  mathlib.py  source_refs.py  theme.py
references/: FloorMask.shader  MechanicalIris.shader
scenes/: scene.py
tests/: test_math_matches_shader.py  test_source_refs.py
